--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -20,6 +21,8 @@
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.3.2"
   }
 }
